--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "test": "cross-env NODE_ENV=testing jest --watchAll --verbose --runInBand --silent",
     "start": "node index.js",
     "server": "nodemon index.js",
-    "migrate": "knex migrate:latest",
-    "rollback": "knex migrate: rollback",
+    "migrate": "npx knex migrate:latest",
+    "rollback": "npx knex migrate:rollback",
     "reset": "npm run rollback && npm run migrate & npm run seed",
     "seed": "knex seed:run"
   },
